<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Workaholic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="intro_pic">Intro Pic</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Nav Drawer Menu Items -->
    <string name="home_title">Home</string>
    <string name="summaries_title">Summaries</string>
    <string name="shifts_title">Shifts</string>
    <string name="jobs_title">Jobs</string>
    <string name="account_title">Account</string>
    <string name="about_title">About</string>
    <string name="logout_title">Logout</string>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/summaries</item>
        <item>@drawable/shifts</item>
        <item>@drawable/jobs</item>
        <item>@drawable/account</item>
        <item>@drawable/about</item>
        <item>@drawable/logout</item>
    </array>

    <!-- Login Activity: -->
    <string name="title_login">Login:</string>
    <string name="title_registration">Registration:</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_surname">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="register_info">If you are not a user, registration is required</string>
    <string name="remember_switch">Remember Me</string>
    <string name="forgot_password">Recover lost password</string>
    <string name="about_app">About</string>
    <string name="login_progress_signing_in">Signing in…</string>
    <string name="registration_progress">Registering new account…</string>
    <string name="changing_password_progress">Changing account info…</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_different_values_password">Passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="hour">Hour</string>
    <string name="clock">Clock</string>
    <string name="about_workaholic_title">About:</string>
    <string name="about_workaholic_text">Workaholic allows you to keep your jobs in tact. Password protected &lt;b>account&lt;/b> with multiple &lt;b>jobs&lt;/b> and &lt;b>shifts&lt;/b> placed in a calendar. Simply, &lt;b>open&lt;/b> the app and &lt;b>mark down&lt;/b> your shift today, everything else is done &lt;b>for you!&lt;/b></string>
    <string name="about_alterway_text">Workaholic is brought to you by &lt;b>ALTERway&lt;/b>. We concentrate on getting all sorts of &lt;b>great ideas&lt;/b> out to the world. Don\'t be left alone! &lt;b>Submit your idea&lt;/b> and join the (r)evolution!</string>
    <string name="about_alterway_link">http://facebook.com/alterway</string>
    <string name="about_workaholic_faq_title">FAQ on the application:</string>
    <string name="about_workaholic_queries_title">Questions, concerns and other queries:</string>
    <string name="about_workaholic_text_detailed">The idea behind the app is no longer to use pieces of papers or excel documents in order to know how many hours do you have this month, this job is done automatically by marking down the shifts in a convenient way. All is protected with your own password and on the top of all, the app doesn\'t even require Internet connection. It is simply a tool to have!</string>
    <string name="about_workaholic_faq_link">http://alter.way.com/workaholic/faq</string>
    <string name="about_workaholic_queries_link">alterwayscandinavia@gmail.com</string>

    <!-- Main Activity: -->
    <string name="logout">Logout</string>

    <!-- Job Activity: -->
    <string name="title_activity_job">Job Info:</string>
    <string name="delete_job">Delete Job</string>
    <string name="save_job">Save Job</string>
    <string name="deadline">Select the :</string>

    <!-- Text Activity: -->
    <string name="title_activity_text">TextActivity</string>
    <string name="title_activity_amount">AmountActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_selection">SelectionActivity</string>
    <string name="title_activity_shift">ShiftActivity</string>

    <!-- Shift Activity: -->
    <string name="delete_shift">Delete Shift</string>
    <string name="set_shift">Set Shift</string>
    <string name="start_at">Start at:</string>
    <string name="select_job">Select Job:</string>
    <string name="set_break_time">Set Break Time:</string>
    <string name="finish_at">Finish at:</string>

    <!-- Summaries: -->
    <string name="total_hours">Total Hours = </string>
    <string name="paycheck_before">Paycheck before taxes = </string>
    <string name="taxes">Taxes = </string>
    <string name="paycheck_after">Paycheck after taxes = </string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- Account: -->
    <string name="title_account">Your Account:</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_main_activity3">MainActivity3</string>

</resources>
