<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/about_workaholic_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal|bottom"
        android:text="@string/about_workaholic_title"
        android:textSize="25sp"
        android:textStyle="bold" 
        android:textColor="@android:color/white"
        android:drawableLeft="@drawable/about_cover"
        android:background="@color/dark_workaholic"/>
    
    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_alignBottom="@+id/about_workaholic_title"
        android:layout_alignLeft="@+id/about_workaholic_title"
        android:layout_alignRight="@+id/about_workaholic_title"
        android:background="@color/red_workaholic" />
    
    <ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/top_view"
	    android:layout_above="@+id/bottom_view" >
	    
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="15dp"
    		android:paddingBottom="30dp" >

            <TextView
                android:id="@+id/about_alterway_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_alterway_text"
                android:layout_centerHorizontal="true"
                android:autoLink="web"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:text="@string/about_alterway_link"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/about_workaholic_queries_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/about_workaholic_queries_title"
                android:autoLink="email"
                android:gravity="center"
                android:text="@string/about_workaholic_queries_link"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/about_alterway_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/about_workaholic_queries_link"
                android:gravity="center"
                android:text="@string/about_alterway_text" />

            <TextView
                android:id="@+id/about_workaholic_faq_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/about_workaholic_faq_title"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/about_workaholic_faq_link"
                android:textStyle="italic" />

            <View
                android:id="@+id/faq_view"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/about_workaholic_faq_link"
                android:background="@color/red_workaholic" />

            <TextView
                android:id="@+id/about_workaholic_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/about_workaholic_text" />

            <TextView
                android:id="@+id/about_workaholic_faq_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/about_workaholic_text_detailed"
                android:layout_marginTop="10dp"
                android:text="@string/about_workaholic_faq_title"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/about_workaholic_text_detailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/about_workaholic_text"
                android:layout_below="@+id/about_workaholic_text"
                android:gravity="center"
                android:text="@string/about_workaholic_text_detailed"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/about_workaholic_queries_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/queries_view"
                android:layout_below="@+id/about_workaholic_faq_link"
                android:layout_marginTop="10dp"
                android:text="@string/about_workaholic_queries_title"
                android:textSize="12sp" />

            <View
                android:id="@+id/queries_view"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_alignRight="@+id/about_workaholic_queries_link"
                android:layout_below="@+id/about_workaholic_queries_title"
                android:background="@color/red_workaholic" />

        </RelativeLayout>
	    
	 </ScrollView>
	 
     <View
         android:id="@+id/bottom_view"
         android:layout_width="match_parent"
         android:layout_height="1dip"
         android:layout_alignLeft="@+id/about_workaholic_title"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/about_workaholic_title"
         android:background="@color/red_workaholic" />

</RelativeLayout>